2006-01-01  Derek Price  <derek@ximbiot.com>

	* base.c (translate_exists): Suppress GCC warning.

2005-12-31  Derek Price  <derek@ximbiot.com>

	* verify.c, verify.h: New files.
	* Makefile.am (cvs_SOURCES): Add new files.
	* main.c: Include "verify.h".
	(opt_usage): Add --verify* args.
	(main): Process same.
	* root.c (new_cvsroot_t): Default verify method options.
	(parse_cvsroot): Process same.
	* root.h (cvsroot_t): Add verify method options.
	* sign.c (get_sign_textmode), sign.h (get_sign_textmode): Export.

2005-12-30  Derek Price  <derek@ximbiot.com>

	* client.c (handle_openpgp_signatures): Clarify error message.

	* rcs.c (RCS_get_openpgp_signatures): Remove erroneous comment.

	* gpg.c (read_u8, read_u16, read_u32): Declare inline.
	(read_u64): New function.
	(read_signature): Expand header comment block.
	(parse_signature): Parse up to key ID.
	(struct openpgp_signature): Move decl to...
	gpg.h (struct openpgp_signature): ...here.
	(parse_signature): New proto.
	* log.c: Include "base64.h" & "gpg.h".
	(log_version): Print signature information when available.
	* sanity.sh: Accept new signature info in log messages.

	* gpg.c (write_part, parse_header, read_signature, parse_signature):
	Use uint8_t rather than unsigned char.

	* gpg.c (read_u8, read_u16, read_u32): Use <stdint.h> uintN_t types for
	output rather than potentially variable bit length types.
	(write_part, parse_header, read_signature, parse_signature): Carry
	through above <stdint.h> change to callers.

	* gpg.c: Minor comment fixes.

	* gpg.c: Include <stdint.h>.
	(parse_header): New function factored from...
	(read_signature): ...here.
	(struct openpgp_signature): New decl.
	(parse_signature): New function.

2005-12-27  Derek Price  <derek@ximbiot.com>

	* gpg.c (read_u32): New function.
	(read_signature): Handle new style CTB packets.

2005-12-13  Derek Price  <derek@ximbiot.com>

	* base.c (ibase_copy, base_merge): Remove signature files when using
	temp files or SUPPRESS_BASES.
